Fixed Card Sizes on Mobile View

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -184,3 +184,7 @@ p.copyright {
   
   h2.bio{text-align: center;}
 }
+
+@media (max-width: 801px){
+  .row .col.s12 {width: 100%;} 
+}
